# openfpm_data

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  Jenkinsfile_mpi  Makefile.am  NN_it_test  NN_it_test_2  build.sh  build_data.sh  build_io.sh  configure  configure.ac  configure_old.ac  csv_out_test.csv  csv_out_unk_test.csv  gc_out2_test.html  gc_out3_test.html  gc_out4_test.html  gc_out5_test.html  gc_out6_test.html  gc_out7_test.html  gc_out_test.html  gc_plot2_out_test.html  gc_plot_out_test.html  install_BOOST.sh  install_MPI_mpich.sh  install_VCDEVEL.sh  openfpm_data.doc  openfpm_io.doc  run.sh  test_graph2_test.graphml  test_graph_test.graphml  vtk_box_3D_2_test.vtk  vtk_box_3D_test.vtk  vtk_box_test.vtk  vtk_graph_test.vtk  vtk_grids_test.vtk  vtk_points_2d_bin_test.vtk  vtk_points_2d_pp_bin_test.vtk  (+2 more)
src/: CMakeLists.txt  CSVWriter.hpp  GraphMLWriter.hpp  GraphMLWriter_unit_tests.hpp  Makefile.am  Makefile_old.am  MatLabWriter.hpp  Memleak_check.cpp  Memleak_check.hpp  Particle.hpp  Particles.hpp  Point.hpp  Point_orig.hpp  Point_test.hpp  Point_test.hpp.bck  Point_test_unit_tests.hpp  TiffWriter.hpp  VTKWriter.hpp  VTKWriter_dist_graph.hpp  VTKWriter_graph.hpp  VTKWriter_grids.hpp  VTKWriter_grids_st.hpp  VTKWriter_grids_util.hpp  VTKWriter_unit_tests.hpp  VTKWriter_vector_box.hpp  base_type.hpp  common.hpp  csv_multiarray.hpp  ct_array.hpp  for_each_ref.hpp  global_const.hpp  graph_unit_tests.hpp  grid.hpp  grid_unit_tests.hpp  hypercube_unit_test.hpp  integrator.hpp  isolation.cpp  isolation.cu  main.cpp  map.hpp  (+36 more)
src/CSVReader/: CSVReader.hpp
src/CSVReader/tests/: CSVReader_unit_test.cpp
src/CSVWriter/: CSVWriter.hpp  CSVWriter_unit_tests.hpp  csv_multiarray.hpp  is_csv_writable.hpp
src/Graph/: CartesianGraphFactory.hpp  graph_unit_tests.hpp  map_graph.hpp
src/GraphMLWriter/: GraphMLWriter.hpp  GraphMLWriter_unit_tests.hpp
src/Grid/: Encap.hpp  comb.hpp  copy_grid_fast.hpp  copy_grid_unit_test.cpp  grid.hpp  grid_base_impl_layout.hpp  grid_base_implementation.hpp  grid_common.hpp  grid_gpu.hpp  grid_key.hpp  grid_key_dx_expression_unit_tests.hpp  grid_key_dx_iterator_hilbert.hpp  grid_key_expression.hpp  grid_pack_unpack.ipp  grid_performance_tests.hpp  grid_sm.hpp  grid_sm_unit_tests.hpp  grid_test_utils.hpp  grid_unit_tests.hpp  grid_util_test.hpp  grid_zm.hpp  map_grid.hpp  map_grid_cuda_ker.cuh  se_grid.hpp  util.hpp
src/Grid/Geometry/: grid_smb.hpp  grid_zmb.hpp
src/Grid/cuda/: cuda_grid_gpu_funcs.cuh  cuda_grid_gpu_int.cu  cuda_grid_gpu_tests.cu  cuda_grid_unit_tests_func.cu  cuda_grid_unit_tests_func.cuh  map_grid_cuda_ker.cuh
src/Grid/gpu_test/: cuda_gpu_func.cpp  (+4 more)
src/HDF5_XdmfWriter/: HDF5_XdmfWriter_point_set.hpp  HDF5_XdmfWriter_util.hpp
src/HDF5_wr/: HDF5_reader.hpp  HDF5_reader_gd.hpp  HDF5_reader_vd.hpp  HDF5_wr.hpp  HDF5_writer.hpp  HDF5_writer_cuda.cu  HDF5_writer_gd.hpp  HDF5_writer_unit_tests.hpp  HDF5_writer_vd.hpp
src/MetaParser/: MetaParser.hpp  MetaParser_unit_test.cpp
src/ObjReader/: ObjReader.hpp  ObjReader_unit_test.cpp
src/Packer_Unpacker/: Pack_selector.hpp  Packer.hpp  Packer_nested_tests.hpp  Packer_unit_tests.hpp  Packer_unpacker_benchmark_test.hpp  Packer_util.hpp  Unpacker.hpp  has_max_prop.hpp  has_pack_agg.hpp  has_pack_encap.hpp  prp_all_zero.hpp
src/Plot/: GoogleChart.hpp  Plot_unit_tests.hpp  util.hpp
src/RawReader/: InitGridWithPixel.hpp  RawReader.hpp  RawReader_unit_tests.hpp
src/Space/: Ghost.hpp  Matrix.hpp  SpaceBox.hpp  SpaceBox_unit_tests.hpp
src/SparseGrid/: SparseGrid.hpp  SparseGridUtil.hpp  SparseGrid_chunk_copy.hpp  SparseGrid_chunk_copy_unit_tests.cpp  SparseGrid_conv_opt.hpp  SparseGrid_iterator.hpp  SparseGrid_iterator_block.hpp  SparseGrid_unit_tests.cpp  cp_block.hpp
src/SparseGridGpu/: BlockMapGpu.hpp  BlockMapGpu_dimensionalityWrappers.cuh  BlockMapGpu_ker.cuh  BlockMapGpu_kernels.cuh  DataBlock.cuh  SparseGridGpu.cuh  SparseGridGpu.hpp  SparseGridGpu_dimensionalityWrappers.cuh  SparseGridGpu_ker.cuh  SparseGridGpu_ker_util.hpp  SparseGridGpu_kernels.cuh  encap_num.hpp
src/VTKWriter/: VTKWriter.hpp  VTKWriter_dist_graph.hpp  VTKWriter_graph.hpp  VTKWriter_graph_util.hpp  VTKWriter_grids.hpp  VTKWriter_grids_st.hpp  VTKWriter_grids_util.hpp  VTKWriter_point_set.hpp  VTKWriter_unit_tests.hpp  VTKWriter_vector_box.hpp  byteswap_portable.hpp  is_vtk_writable.hpp
src/Vector/: map_vector.hpp  map_vector_MPI.hpp  map_vector_cuda_ker.cuh  map_vector_grow_p.hpp  map_vector_printers.hpp  map_vector_sparse.hpp  map_vector_sparse_unit_tests.cpp  map_vector_sparse_unit_tests.cu  map_vector_std.hpp  map_vector_std_ptr.hpp  map_vector_std_util.hpp  map_vector_std_util_unit_test.hpp  se_vector.hpp  util.hpp  vect_isel.hpp  vector_def.hpp  vector_gpu_unit_tests.cu  vector_map_iterator.hpp  vector_pack_unpack.ipp  vector_performance_test.hpp  vector_std_pack_unpack.ipp  vector_subset.hpp  vector_test_util.hpp  vector_unit_tests.hpp
src/config/: config_cmake.h.in
src/data_type/: aggregate.hpp  aggregate_unit_tests.cpp  scalar.hpp
src/garbage/: HDF5_XdmfWriter.hpp  HDF5_XdmfWriter_point_set.hpp  HDF5_XdmfWriter_unit_tests.hpp
src/map_units_test/: Point_test.hpp  Point_test.hpp.bck  grid_test.hpp
src/memory_ly/: Encap.hpp  memory_array.hpp  memory_c.hpp  memory_conf.hpp  memory_conf_unit_tests.cpp  t_to_memory_c.hpp
src/util/: GBoxes.hpp  Pack_stat.hpp  PathsAndFiles.hpp  SimpleRNG.hpp  boost_multi_array_openfpm.hpp  check_no_pointers.hpp  common.hpp  compute_optimal_device_grid.hpp  convert.hpp  create_vmpl_sequence.hpp  ct_array.hpp  cuda_util.hpp  debug.hpp  for_each_ref.hpp  for_each_ref_host.hpp  hostDevice_util_funcs.hpp  math_util_complex.hpp  mathutil.hpp  mathutil_unit_test.hpp  meta_copy.hpp  mul_array_extents.hpp  object_copy.hpp  object_creator.hpp  object_s_di.hpp  object_si_d.hpp  object_si_di.hpp  object_util.hpp  se_util.hpp  sparsegrid_util_common.hpp  tokernel_transformation.hpp  util.hpp  util_debug.hpp  util_test.hpp  variadic_to_vmpl.hpp  variadic_to_vmpl_unit_test.hpp  vector_creator.hpp  vectors_util.hpp  weight_counter_tests.hpp  zmorton.hpp
(+242 files in other folders)
